style.css
body {
    background-color: rgb(222, 190, 255); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-image: url(img/live-background.gif);
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
}

h1 {
    margin: 4px;
}

#topbar {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    position: absolute;
    width: 99%;
    backdrop-filter: blur(8px);
    background: linear-gradient(135deg, rgba(255, 255, 255, 0.5) 0%, rgba(253, 221, 255, 0.5) 33%, rgba(251, 191, 255, 0.5) 100%);
    color: black;
    border: 2px solid;
    border-radius: 10px;
}

#logo {
    margin-top: auto; 
    margin-bottom: auto;
    border-radius: 50%;
    padding-left: 12px;
    padding-right: 12px;
}

#time {
    text-align: right;
    padding-right: 12px;
}

#profilepic {
    border: 2px solid;
    border-radius: 50%;
}

#welcome {
    text-align: center;
    width: 550px;
}

#intro-message {
    text-align: left;
    display: flex;
    max-width: 100%;
    padding-top: 12px;
    padding-bottom: 12px;
}

#intro-message p {
    margin-top: auto;
    margin-bottom: auto;
    padding-left: 12px;
}

#welcomeOpen:hover {
    cursor: pointer;
    transform: scale(110%);
    font-style: italic;
}

#pawNotes {
    width: 1000px;
}

#sidebar {
    width: 150px; 
    background: linear-gradient(135deg, rgba(255, 241, 252, 0.6) 0%,  rgba(225, 156, 255, 0.6) 100%);
    backdrop-filter: blur(10px); 
    padding: 10px; 
    border-top-left-radius: 8px;
    border-bottom-left-radius: 8px;
    border-right: 3px solid; 
    text-align: left;
}

#notesContent {
    background: linear-gradient(15deg, rgba(225, 156, 255, 0.6) 0%, rgba(255, 241, 252, 0.6) 100%);
    width: 100%;
    padding: 10px;  
    text-align: left; 
    border-top-right-radius: 8px;
    border-bottom-right-radius: 8px;
}

#pawNotes-logo {
    padding-top: 16px;
}

#pawPics {
    width: 1000px;
}

#pawPicsContainer {
    display: flex; 
    border: solid; 
    margin-top: 20px; 
    margin-left: auto; 
    margin-right: auto; 
    max-width: 550px;
    border-radius: 18px;
}

#pawPicsSlot {
    border-right: solid;
    border-left: solid;
}

.window {
    background-color: rgba(254, 230, 254, 0.7);
    backdrop-filter: blur(10px);
    border: solid;
    border-radius: 16px; 
    padding: 0 20px 20px 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.windowHeader {
    background-color: rgba(186, 169, 186, 0.7);
    margin-left: -20px;
    margin-right: -20px;
    width: calc(100% + 40px);
    border-top-left-radius: 14px;
    border-top-right-radius: 14px;
    border-bottom: rgba(0, 0, 0, 0.7) 3px solid;
    display: flex;
    justify-content: space-between;
}

.closeButton {

    border: none;
    background-color: rgba(0, 0, 0, 0);

    background-size: contain;
    background-repeat: no-repeat;
    background-image: url(img/close.png);
    background-position: center;

    padding: 16px;
}

.closeButton:hover {
    cursor: pointer;
    transform: scale(105%);
}

.selected {
    border: 3px rgba(203, 161, 245, 0.5) dotted;
    padding: 10px;
}

.icon {
    text-align: center; 
    filter: drop-shadow(0 0 8px black); 
    width: fit-content;
    padding: 10px;
}

.pawPicsBtn {
    border: none;
    background: linear-gradient(90deg, rgba(255, 255, 255, 0.215) 0%, rgba(255, 255, 255, 0.215) 100%);
}

.pawPicsBtn:hover {
    cursor: pointer;
    .pawBtnImg {
        transform: scale(120%);
    }
}

